[tool.poetry]
name = "tracker1"
version = "0.1.0"
description = ""
authors = ["Brian Hudson <reallybrianuhdson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^1.4.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
